<?xml version="1.0"?>
<package format="2">
<name>image_lane_detector</name>
<version>0.0.0</version>
<description>The image_lane_detector package</description>

<maintainer email="nobody@clavion.net">SongMX</maintainer>
<license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>std_msgs</exec_depend>
<build_depend>local_messages</build_depend>
<exec_depend>local_messages</exec_depend>

<build_depend>cv_bridge</build_depend>
<exec_depend>cv_bridge</exec_depend>
<build_export_depend>cv_bridge</build_export_depend>
<build_depend>image_transport</build_depend>
<exec_depend>image_transport</exec_depend>
<build_export_depend>image_transport</build_export_depend>
<!-- The export tag contains other, unspecified, tags -->
<export>
<!-- Other tools can request additional information be placed here -->

</export>
</package>
